updated version number in configure-script to 0.3.1-testing to differentiate between executables built from svn and published releases
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@9 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.in
+++ b/Makefile.in
@@ -209,7 +209,7 @@ nzbget_SOURCES = ArticleDownloader.cpp ArticleDownloader.h ColoredFrontend.cpp \
 EXTRA_DIST = nzbget.conf.example \
 	win32.h NTService.cpp NTService.h \
 	libpar2-0.2-MSVC8.patch libsigc++-2.0.18-MSVC8.patch \
-	nzbget.kdevelop nzbget.sln nzbget.vcproj
+	Makefile.cvs nzbget.kdevelop nzbget.sln nzbget.vcproj
 
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
