refactored: new class QueueEditor to handle all edit-requests; related code moved from QueueCoordinator and RemoteServer
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@30 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.vcproj
+++ b/nzbget.vcproj
@@ -340,6 +340,14 @@
 			>
 		</File>
 		<File
+			RelativePath=".\QueueEditor.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\QueueEditor.h"
+			>
+		</File>
+		<File
 			RelativePath=".\RemoteClient.cpp"
 			>
 		</File>
