imporved error reporting in remote server on binding errors (previously they were reported only with debug-binaries); fixed: remote server was listening to all interfaces regardless of option <serverip>, now it listen only to the specified address, but the old behaviour is also possible with address <0.0.0.0>, which means <all interfaces>
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@70 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf.example
+++ b/nzbget.conf.example
@@ -294,7 +294,8 @@ UpdateInterval=200
 
 # Set the IP on which the server listen and which client uses to contact 
 # the server. It could be dns-hostname or ip-address (more effective since
-# does not require dns-lookup)
+# does not require dns-lookup).
+# If you want the server to listen to all interfaces, use "0.0.0.0"
 ServerIp=127.0.0.1
 
 # Set the port which the server & client use
