added the automatic cleaning up of the download queue (deletion of unneeded paused par-files) after successful par-check/repair - new option <ParCleanupQueue>
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@98 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf.example
+++ b/nzbget.conf.example
@@ -379,6 +379,14 @@ ParRepair=yes
 # and the option "strictparname" does not change this behavior
 StrictParName=yes
 
+# Cleanup download queue after successful check/repair (yes, no)
+# Enable this option for automatic deletion of unneeded (paused) par-files 
+# from download queue after successful check/repair.
+# NOTE: before cleaning up the program checks if all paused files are par-files.
+# If there are paused non-par-files (this means that you have paused them
+# manually), the cleanup will be skipped for this collection.
+ParCleanupQueue=yes
+
 
 ##############################################################################
 ### POSTPROCESSING                                                         ###
