added option <DetailTarget> to allow to filter the (not so important) log-messages from articles' downloads (they have now the type <detail> instead of <info>)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@105 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf.example
+++ b/nzbget.conf.example
@@ -268,11 +268,12 @@ CreateLog=yes
 ResetLog=no
 
 # How various messages must be printed (screen, log, both, none)
-# Debug-messages can be only printed if the programm was compiled in 
+# Debug-messages can be printed only if the programm was compiled in 
 # debug-mode: "./configure --enable-debug"
-InfoTarget=both
-WarningTarget=both
 ErrorTarget=both
+WarningTarget=both
+InfoTarget=both
+DetailTarget=both
 DebugTarget=both
 
 # Number of messages stored in buffer and available for remote clients
