updated the description of option <decode> in nzbget.conf.example
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@116 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf.example
+++ b/nzbget.conf.example
@@ -159,7 +159,7 @@ DupeCheck=no
 RenameBroken=no
 
 # Decode articles (yes, no)
-# yes - use internal yEnc-Decoder.
+# yes - decode articles using internal decoder (supports yEnc and UU formats).
 # no - the articles will not be decoded and joined. External programs 
 #      (like "uudeview") can be used to decode and join downloaded articles.
 #      Also useful for debugging to look at article's source text.
