improved the parchecker: added the detection and processing of files splitted after parring
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@119 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/config.h.in
+++ b/config.h.in
@@ -46,6 +46,9 @@
 /* Define to 1 to use pragma pack directive in MessageBase.h */
 #undef HAVE_PRAGMA_PACK
 
+/* Define to 1 if stat64 is supported */
+#undef HAVE_STAT64
+
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
 
