added the queueing of post-process-scripts and waiting for script's completion before starting of a next job in postprocessor (par-job or script); the purpose of changes was to provide more balanced cpu utilization; the state <executing script> is now viewable via XML-RPC method <postqueue>
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@121 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf.example
+++ b/nzbget.conf.example
@@ -392,7 +392,7 @@ ParCleanupQueue=yes
 # Set path to program, that must be executed after the download of
 # nzb-file or one collection in nzb-file (if par-check enabled)
 # is completed and possibly par-checked/repaired.
-# Six arguments are being passed to this program:
+# Five arguments are passed to this program:
 #  - path to destination dir, where downloaded files are located;
 #  - name of nzb-file processed;
 #  - name of par-file processed (if par-checked) or empty string (if not);
